--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+  <!-- Navegador y search -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -43,6 +44,7 @@
     </div>
   </nav>
 
+<!-- Imagenes -->
   <div class="imagenes">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -80,35 +82,25 @@
       </a>
     </div>
   </div>
-  <div class="container-fluid">
-      <div class="container">
-        <h1 class="display-4 text-center" >Testimonios</h1>
-      </div>
-    </div>
-  <div class="row">
-    <div class="col-sm-4">
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="../mobile-first/asset/img/turist1.jpg" alt="Card image cap">
+  <!-- Imagenes -->
+  <div class="card-group cards">
+    <div class="card">
+      <img class="card-img-top cardImg" src="asset/img/turist1.jpg" alt="Card image cap">
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit".</p>
       </div>
     </div>
-    </div>
-    <div class="col-sm-4">
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="../mobile-first/asset/img/turist2.jpg" alt="Card image cap">
+    <div class="card">
+      <img class="card-img-top cardImg" src="asset/img/turist2.jpg" alt="Card image cap">
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit".</p>
       </div>
     </div>
-    </div>
-    <div class="col-sm-4">
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="../mobile-first/asset/img/turist3.jpg" alt="Card image cap">
+    <div class="card">
+      <img class="card-img-top cardImg" src="asset/img/turist3.jpg" alt="Card image cap">
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit".</p>
       </div>
-    </div>
     </div>
   </div>
   <!-- contactanos-->
